--- a/frist/frist/Base.lproj/Main.storyboard
+++ b/frist/frist/Base.lproj/Main.storyboard
@@ -103,30 +103,114 @@
             </objects>
             <point key="canvasLocation" x="140.57971014492756" y="69.642857142857139"/>
         </scene>
-        <!--Landing View Controller-->
+        <!--Setting-->
         <scene sceneID="CJx-3V-lol">
             <objects>
                 <viewController storyboardIdentifier="LandingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="DZ8-AK-fBI" customClass="LandingViewController" customModule="frist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T2N-yQ-MQU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9i-D4-fEC">
+                                <rect key="frame" x="141" y="258" width="132" height="81"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ek9-Gb-m3c"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="linkColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Setting" image="seal" catalog="system" id="f94-SF-enj"/>
                     <navigationItem key="navigationItem" id="eYd-Jd-uiF"/>
+                    <connections>
+                        <outlet property="emailtxt" destination="Y9i-D4-fEC" id="KNH-3k-rBO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MuG-i1-n6Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="987" y="70"/>
+            <point key="canvasLocation" x="2939" y="1223"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="GWa-dv-VbY">
+            <objects>
+                <viewController id="vSp-CT-EdJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eoa-0U-7pT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="SP1-ei-sx3">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <viewLayoutGuide key="safeArea" id="Chc-9F-scX"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="XqJ-qe-TWx"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="z5G-aE-H8J"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XPF-TP-sBq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2939" y="456"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="hIw-Xt-ztf">
+            <objects>
+                <viewController id="KyS-SA-Wv9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rlg-DF-Kuf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="dyB-JF-N3g"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="zXd-jJ-ehW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rir-cz-EoP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2880" y="-340"/>
+        </scene>
+        <!--Tab Controller-->
+        <scene sceneID="FWf-6L-IDB">
+            <objects>
+                <tabBarController storyboardIdentifier="tabController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="iJE-3E-49g" customClass="tabController" customModule="frist" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RAj-DA-Lsk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="KyS-SA-Wv9" kind="relationship" relationship="viewControllers" id="1BY-xX-RDE"/>
+                        <segue destination="vSp-CT-EdJ" kind="relationship" relationship="viewControllers" id="pGc-31-dlE"/>
+                        <segue destination="DZ8-AK-fBI" kind="relationship" relationship="viewControllers" id="brV-fe-GzN"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vvK-uU-w93" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1778" y="70"/>
         </scene>
     </scenes>
     <resources>
         <image name="diamond" width="343" height="251"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="homekit" catalog="system" width="128" height="106"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="seal" catalog="system" width="128" height="128"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
