--- a/frist/frist/Base.lproj/Main.storyboard
+++ b/frist/frist/Base.lproj/Main.storyboard
@@ -103,36 +103,7 @@
             </objects>
             <point key="canvasLocation" x="140.57971014492756" y="69.642857142857139"/>
         </scene>
-        <!--Setting-->
-        <scene sceneID="CJx-3V-lol">
-            <objects>
-                <viewController storyboardIdentifier="LandingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="DZ8-AK-fBI" customClass="LandingViewController" customModule="frist" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="T2N-yQ-MQU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9i-D4-fEC">
-                                <rect key="frame" x="141" y="258" width="132" height="81"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="ek9-Gb-m3c"/>
-                        <color key="backgroundColor" systemColor="linkColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Setting" image="seal" catalog="system" id="f94-SF-enj"/>
-                    <navigationItem key="navigationItem" id="eYd-Jd-uiF"/>
-                    <connections>
-                        <outlet property="emailtxt" destination="Y9i-D4-fEC" id="KNH-3k-rBO"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MuG-i1-n6Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2939" y="1223"/>
-        </scene>
-        <!--Profile-->
+        <!--Fav-->
         <scene sceneID="GWa-dv-VbY">
             <objects>
                 <viewController id="vSp-CT-EdJ" sceneMemberID="viewController">
@@ -150,27 +121,42 @@
                         <viewLayoutGuide key="safeArea" id="XqJ-qe-TWx"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="z5G-aE-H8J"/>
+                    <tabBarItem key="tabBarItem" title="Fav" image="star" catalog="system" id="z5G-aE-H8J"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XPF-TP-sBq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2939" y="456"/>
+            <point key="canvasLocation" x="141" y="892"/>
         </scene>
         <!--Home-->
         <scene sceneID="hIw-Xt-ztf">
             <objects>
-                <viewController id="KyS-SA-Wv9" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="homeViewController" id="KyS-SA-Wv9" customClass="homeViewController" customModule="frist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rlg-DF-Kuf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AB7-iK-zWS">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="dyB-JF-N3g"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstItem="dyB-JF-N3g" firstAttribute="trailing" secondItem="AB7-iK-zWS" secondAttribute="trailing" id="N4o-3Y-woC"/>
+                            <constraint firstItem="AB7-iK-zWS" firstAttribute="leading" secondItem="dyB-JF-N3g" secondAttribute="leading" id="YZ7-3h-Ssd"/>
+                            <constraint firstItem="dyB-JF-N3g" firstAttribute="bottom" secondItem="AB7-iK-zWS" secondAttribute="bottom" id="aD2-1l-mDb"/>
+                            <constraint firstItem="AB7-iK-zWS" firstAttribute="top" secondItem="dyB-JF-N3g" secondAttribute="top" id="uof-rA-jKS"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="zXd-jJ-ehW"/>
+                    <connections>
+                        <outlet property="tableview" destination="AB7-iK-zWS" id="3Bj-db-5bK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rir-cz-EoP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2880" y="-340"/>
+            <point key="canvasLocation" x="1111.5942028985507" y="891.96428571428567"/>
         </scene>
         <!--Tab Controller-->
         <scene sceneID="FWf-6L-IDB">
@@ -184,7 +170,6 @@
                     <connections>
                         <segue destination="KyS-SA-Wv9" kind="relationship" relationship="viewControllers" id="1BY-xX-RDE"/>
                         <segue destination="vSp-CT-EdJ" kind="relationship" relationship="viewControllers" id="pGc-31-dlE"/>
-                        <segue destination="DZ8-AK-fBI" kind="relationship" relationship="viewControllers" id="brV-fe-GzN"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vvK-uU-w93" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -195,10 +180,9 @@
     <resources>
         <image name="diamond" width="343" height="251"/>
         <image name="homekit" catalog="system" width="128" height="106"/>
-        <image name="person" catalog="system" width="128" height="117"/>
-        <image name="seal" catalog="system" width="128" height="128"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="star" catalog="system" width="128" height="116"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
